# josh_udcn_course4

./: .gitignore
Project_Starter_Files-Building_a_Metrics_Dashboard/: README.md  dashboards.json  docker.sh  fixes.md  rebuild.sh  temp.yaml
Project_Starter_Files-Building_a_Metrics_Dashboard/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
Project_Starter_Files-Building_a_Metrics_Dashboard/manifests/app/: backend.yaml  frontend.yaml  jaeger.yaml  trial.yaml
Project_Starter_Files-Building_a_Metrics_Dashboard/reference-app/backend/: app.py  pyproject.toml
Project_Starter_Files-Building_a_Metrics_Dashboard/reference-app/frontend/: Dockerfile  app.py  pyproject.toml  requirements.txt
Project_Starter_Files-Building_a_Metrics_Dashboard/reference-app/helloworld/: app.py
Project_Starter_Files-Building_a_Metrics_Dashboard/reference-app/trial/: app.py  pyproject.toml  requirements.txt
