[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Josh Haines", email = "Josh@JoshHaines.com"},
]
dependencies = [
    "flask==1.1.2",
    "requests==2.23.0",
    "pylint==2.4.0",
    "gunicorn==20.0.4",
    "pymongo==3.11.0",
    "flask-pymongo==2.3.0",
    "prometheus-client==0.12.0",
    "prometheus-flask-exporter>=0.18.7",
    "jaeger-client>=4.8.0",
    "flask-opentracing>=1.1.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
